--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
     --navCol: #333;
     --fontCol: #ededed;
     --contentBoxCol: #87878780;
-    --accentCol: #fc0303;
+    --accentCol: #fca503;
 }
 
 * {
