--- a/style.css
+++ b/style.css
@@ -7,9 +7,6 @@
     display: none;
 }
 
-ul {
-    list-style-type: none;
-}
 
 :root {
     --navCol: #bcd4f3;
@@ -17,21 +14,29 @@ ul {
     --fontCol: #fff;
     --contentBoxCol: #c7c7c7;
     --contentBoxCol: rgba(20, 47, 121, 0.6);
-
-    --databaseContainerMargin: 50px;
-
+    
+    --databaseContainerMargin: 10vw;
+    
 }
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-
-    background-image: url("res/back.png");
+    
+    /* background-image: url("res/back.png"); */
     background-attachment: fixed;
     background-position:center;
     background-size:cover;
     background-repeat: no-repeat;
     overflow-x: hidden;
+    
+}
 
+ul {
+    list-style-type: none;
+}
+
+p {
+    font-weight: bold;
 }
 
 #navBar {
@@ -82,37 +87,100 @@ body{
     text-align: center;
 }
 
-#titleImages ul {
-    width: 100%;
-    flex-wrap: wrap;
-    display: inline-flex;
-    justify-content: space-evenly;
+@media screen and not (max-width: 600px){
+    #titleImages ul {
+        width: 100%;
+        flex-wrap: wrap;
+        display: inline-flex;
+        justify-content: space-evenly;
+    }
+    
+    #titleImages li {
+        padding: 0.333%;
+        width: 30%;
+    }
+    
+    #titleImages img {
+        border-radius: 25px;
+        max-width: 700px;
+        width:  100%;
+        height: 100%;
+        object-fit:cover;
+    
+        /* filter: drop-shadow(0 0 5px black); */
+        transform: translateY(50);
+    }
+    
+    #titleImages li:nth-child(2) {
+        transform: translateY(-100px);
+    }
+    
+    .titleImageWrapper {
+        border-radius: 25px;
+        background-color: var(--navCol);
+        filter: drop-shadow(0 0 5px black);
+        width: fit-content;
+    }
+    
+    .titleImageWrapper p {
+        color: var(--fontCol);
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    
+    #introText {
+        color: var(--navCol);
+        margin-top: 20%;
+        font-size: larger;
+    }
 }
 
-#titleImages li {
-    padding: 0.333%;
-    width: 30%;
-}
+@media screen and (max-width: 600px){
+    #titleImages ul {
+        width: 100%;
+        flex-wrap: wrap;
+        display: inline-flex;
+        flex-flow: column;
+        align-items: center;
 
-#titleImages img {
-    border-radius: 25px;
-    max-width: 700px;
-    width:  100%;
-    height: 100%;
-    object-fit:cover;
-
-    filter: drop-shadow(0 0 5px black);
-    transform: translateY(50);
-}
-
-#titleImages li:nth-child(2){
-    transform: translateY(-100px);
-}
-
-#titleImages li:nth-child(2) p{
-    margin-top: 20%;
-    font-weight: bold;
-    color: var(--navButtonHoverBackground);
+        transform: translateY(-100px);
+    }
+    
+    #titleImages li {
+        padding: 3%;
+        width: 80%;
+    }
+    
+    #titleImages img {
+        border-radius: 25px;
+        max-width: 700px;
+        width:  100%;
+        height: 100%;
+        object-fit:cover;
+    }
+    
+    #titleImages li:nth-child(3) {
+        display: none;
+    }
+    
+    .titleImageWrapper {
+        border-radius: 25px;
+        background-color: var(--navCol);
+        filter: drop-shadow(0 0 5px black);
+        width: fit-content;
+    }
+    
+    .titleImageWrapper p {
+        color: var(--fontCol);
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    
+    #introText {
+        color: var(--navCol);
+        margin-top: 20%;
+        font-size: larger;
+    }
 }
 
 #databaseContainerShell {
